add middleware basket

--- a/catalog/templates/templatetags/catalog_menu.html
+++ b/catalog/templates/templatetags/catalog_menu.html
@@ -24,8 +24,8 @@
 </ul>
 
 <div class="mobile_menu_buttons">
-	<a class="mobile_menu_button" href=""><img src="img/i_heart.png" /> Избранное</a>
-	<a class="mobile_menu_button arrow open_modal close_menu" href="#login_modal"><img src="img/i_user.png" /> Ваш кабинет</a>
-	<a class="mobile_menu_button arrow open_modal close_menu" href="#cities_modal"><img src="img/i_mini-cart.png" /> Санкт-петербург</a>
+	<a class="mobile_menu_button" href=""><img src="{% static 'img/i_heart.png' %}" /> Избранное</a>
+	<a class="mobile_menu_button arrow open_modal close_menu" href="#login_modal"><img src="{% static 'img/i_user.png' %}" /> Ваш кабинет</a>
+	<a class="mobile_menu_button arrow open_modal close_menu" href="#cities_modal"><img src="{% static 'img/i_mini-cart.png' %}" /> Санкт-петербург</a>
 	<a class="button" href="tel:+74950038995">+7 (495) 003-89-95</a>
 </div>
