--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load thumbnail %}
+{% load humanize %}
 {% load catalog_tags %}
 <!DOCTYPE html>
 <html lang="ru">
@@ -31,7 +32,7 @@
 			</nav>
 		</div>
 
-		<img class="mobile_logo" src="img/logo.png" alt="" />
+		<img class="mobile_logo" src="{% static 'img/logo.png' %}" alt="" />
 
 		<form action="" method="post" class="topnav_search_form">
 			<input type="text" placeholder="Например, сковорода вок" class="topnav_search_input" />
@@ -41,7 +42,7 @@
 			<div class="search_dropdown mCustomScrollbar" data-mcs-theme="minimal-dark">
 				<!-- ITEM -->
 				<div class="search_dropdown_product">
-					<a href="" class="sdp_image"><img src="img/prod_1.jpg" alt=""></a>
+					<a href="" class="sdp_image"><img src="{% static 'img/prod_1.jpg' %}" alt=""></a>
 					<div class="sdp_info_box">
 						<a href="">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
 						<div class="sdp_artnum">Артикул: <span>9610</span></div>
@@ -52,70 +53,6 @@
 					</div>
 				</div>
 
-				<!-- ITEM -->
-				<div class="search_dropdown_product">
-					<a href="" class="sdp_image"><img src="img/prod_1.jpg" alt=""></a>
-					<div class="sdp_info_box">
-						<a href="">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-						<div class="sdp_artnum">Артикул: <span>9610</span></div>
-						<div class="sdp_prices">
-							<span class="sdp_price">1390 ₽</span>
-							<span class="instock not">Нет в наличии</span>
-						</div>
-					</div>
-				</div>
-
-				<!-- ITEM -->
-				<div class="search_dropdown_product">
-					<a href="" class="sdp_image"><img src="img/prod_1.jpg" alt=""></a>
-					<div class="sdp_info_box">
-						<a href="">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-						<div class="sdp_artnum">Артикул: <span>9610</span></div>
-						<div class="sdp_prices">
-							<span class="sdp_price">1390 ₽</span>
-							<span class="instock">В наличии</span>
-						</div>
-					</div>
-				</div>
-
-				<!-- ITEM -->
-				<div class="search_dropdown_product">
-					<a href="" class="sdp_image"><img src="img/prod_1.jpg" alt=""></a>
-					<div class="sdp_info_box">
-						<a href="">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-						<div class="sdp_artnum">Артикул: <span>9610</span></div>
-						<div class="sdp_prices">
-							<span class="sdp_price">1390 ₽</span>
-							<span class="instock not">Нет в наличии</span>
-						</div>
-					</div>
-				</div>
-
-				<!-- ITEM -->
-				<div class="search_dropdown_product">
-					<a href="" class="sdp_image"><img src="img/prod_1.jpg" alt=""></a>
-					<div class="sdp_info_box">
-						<a href="">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-						<div class="sdp_artnum">Артикул: <span>9610</span></div>
-						<div class="sdp_prices">
-							<span class="sdp_price">1390 ₽</span>
-							<span class="instock">В наличии</span>
-						</div>
-					</div>
-				</div>
-
-				<!-- ITEM -->
-				<div class="search_dropdown_product">
-					<a href="" class="sdp_image"><img src="img/prod_1.jpg" alt=""></a>
-					<div class="sdp_info_box">
-						<a href="">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-						<div class="sdp_artnum">Артикул: <span>9610</span></div>
-						<div class="sdp_prices">
-							<span class="sdp_price">1390 ₽</span>
-							<span class="instock not">Нет в наличии</span>
-						</div>
-					</div>
-				</div>
 
 				<a href="" class="button search_see_all">Показать все</a>
 
@@ -129,8 +66,8 @@
 		</ul>
 
 		<div class="top_mobile_buttons">
-			<a class="open_mobile_search" href=""><img src="img/i_search.png" /></a>
-			<a class="open_mobile_cart" href=""><img src="img/i_mini-cart.png" /></a>
+			<a class="open_mobile_search" href=""><img src="{% static 'img/i_search.png' %}" /></a>
+			<a class="open_mobile_cart" href=""><img src="{% static 'img/i_mini-cart.png' %}" /></a>
 		</div>
 
 	</div>
@@ -219,7 +156,7 @@
 
 
 		<main class="maincol wide white_bg maincol_filters">
-			<a href="#" class="button-o pink medium mobile_filters_button"><img src="img/icon_filter.png" /> Фильтры</a>
+			<a href="#" class="button-o pink medium mobile_filters_button"><img src="{% static 'img/icon_filter.png' %}" /> Фильтры</a>
 			<div class="maincol_filters_box">
 				<div class="autoScroll">
 					<div class="ip_maincol_checkbox">
@@ -271,20 +208,20 @@
 						{% if prod.price_old %}
 						<u class="product_item-price_old">{{ prod.price_old }} ₽</u>
 						{% endif %}
-						<span class="product_item-price">{{ prod.price }} ₽</span>
+						<span class="product_item-price">{{ prod.price|floatformat:0|intcomma }} ₽</span>
 					</div>
 					<div class="product_item-buttons">
 						{% comment %}
 						<span class="product_added visible">Добавлен в корзину</span>
 						{% endcomment %}
-						<a href="#" class="button-o gray product_item-buy">В корзину</a>
+						<a href="#" data-product="{{ prod.pk }}" class="button-o gray product_item-buy">В корзину</a>
 						<div class="product_item-counter_box">
 							<div class="counter_box">
 								<button type="button" class="counter_ctrl minus">-</button>
 								<input type="text" class="counter_input" value="1" data-min="1" data-max="99" />
 								<button type="button" class="counter_ctrl plus">+</button>
 							</div>
-							<button class="button add_to_cart_small"><img src="img/i_cart.png" alt="" /></button>
+							<button class="button add_to_cart_small"><img src="{% static 'img/i_cart.png' %}" alt="" /></button>
 							<a href="#" class="close_add_to_cart">x</a>
 						</div>
 						<a href="" class="product_item-like"><i class="fa fa-heart"></i></a>
@@ -336,7 +273,7 @@
 <!-- CART -->
 <a href="#" class="minicart_open visible">
 	<span class="minicart_count">17</span>
-	<div class="button"><img src="img/i_cart_big.png" alt="" /></div>
+	<div class="button"><img src="{% static 'img/i_cart_big.png' %}" alt="" /></div>
 </a>
 
 <div class="modal" id="modal_minicart">
@@ -349,68 +286,11 @@
 
 			<!-- PRODUCT -->
 			<div class="minicart_product">
-				<div class="minicart_product-image"><img src="img/prod_1.jpg" alt="" /></div>
+				<div class="minicart_product-image"><img src="{% static 'img/prod_1.jpg' %}" alt="" /></div>
 				<div class="minicart_product-content">
 					<a href="" class="minicart_product-title">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
 					<div class="minicart_product-price_box">
 						<div class="product_price_old">89390 ₽</div>
-						<div class="minicart_product-price">1390 ₽</div>
-					</div>
-					<div class="minicart_product-counter_row">
-						<div class="counter_big_box">
-							<button type="button" class="counter_big_ctrl minus">-</button>
-							<input type="text" class="counter_big_input" value="1" data-min="1" data-max="99" />
-							<button type="button" class="counter_big_ctrl plus">+</button>
-						</div>
-						<a href="#" class="minicart_product-remove">x</a>
-					</div>
-				</div>
-			</div>
-
-			<!-- PRODUCT -->
-			<div class="minicart_product">
-				<div class="minicart_product-image"><img src="img/prod_1.jpg" alt="" /></div>
-				<div class="minicart_product-content">
-					<a href="" class="minicart_product-title">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-					<div class="minicart_product-price_box">
-						<div class="minicart_product-price">1390 ₽</div>
-					</div>
-					<div class="minicart_product-counter_row">
-						<div class="counter_big_box">
-							<button type="button" class="counter_big_ctrl minus">-</button>
-							<input type="text" class="counter_big_input" value="1" data-min="1" data-max="99" />
-							<button type="button" class="counter_big_ctrl plus">+</button>
-						</div>
-						<a href="#" class="minicart_product-remove">x</a>
-					</div>
-				</div>
-			</div>
-
-			<!-- PRODUCT -->
-			<div class="minicart_product">
-				<div class="minicart_product-image"><img src="img/prod_1.jpg" alt="" /></div>
-				<div class="minicart_product-content">
-					<a href="" class="minicart_product-title">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-					<div class="minicart_product-price_box">
-						<div class="minicart_product-price">1390 ₽</div>
-					</div>
-					<div class="minicart_product-counter_row">
-						<div class="counter_big_box">
-							<button type="button" class="counter_big_ctrl minus">-</button>
-							<input type="text" class="counter_big_input" value="1" data-min="1" data-max="99" />
-							<button type="button" class="counter_big_ctrl plus">+</button>
-						</div>
-						<a href="#" class="minicart_product-remove">x</a>
-					</div>
-				</div>
-			</div>
-
-			<!-- PRODUCT -->
-			<div class="minicart_product">
-				<div class="minicart_product-image"><img src="img/prod_1.jpg" alt="" /></div>
-				<div class="minicart_product-content">
-					<a href="" class="minicart_product-title">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-					<div class="minicart_product-price_box">
 						<div class="minicart_product-price">1390 ₽</div>
 					</div>
 					<div class="minicart_product-counter_row">
