--- a/templates/index.html
+++ b/templates/index.html
@@ -126,9 +126,6 @@
 					<div class="product_item incatalog">
 						<div class="product_item-icons">
 							<span class="beidge count">Осталось: 5</span>
-							<span class="beidge new">Новинка</span>
-							<span class="beidge leader">Лидер продаж</span>
-							<span class="beidge free_delivery">Доставка бесплатно!</span>
 						</div>
 						<a href="" class="product_item-image">
 							{% thumbnail prod.img "189x135" crop="center" as im %}
@@ -147,7 +144,7 @@
 							{% comment %}
 							<span class="product_added visible">Добавлен в корзину</span>
 							{% endcomment %}
-							<a href="#" class="button-o gray product_item-buy">В корзину</a>
+							<a href="#" data-product="{{ prod.pk }}" class="button-o gray product_item-buy">В корзину</a>
 							<div class="product_item-counter_box">
 								<div class="counter_box">
 									<button type="button" class="counter_ctrl minus">-</button>
@@ -210,7 +207,7 @@
 							{% comment %}
 							<span class="product_added">Добавлен в корзину</span>
 							{% endcomment %}
-							<a href="#" class="button-o gray product_item-buy">В корзину</a>
+							<a href="#" data-product="{{ prod.pk }}" class="button-o gray product_item-buy">В корзину</a>
 							<div class="product_item-counter_box">
 								<div class="counter_box">
 									<button type="button" class="counter_ctrl minus">-</button>
