--- a/templates/all_modals.html
+++ b/templates/all_modals.html
@@ -28,6 +28,7 @@
 </div>
 
 
+{% comment %}
 <a href="#" class="minicart_open visible">
 	<span class="minicart_count">17</span>
 	<div class="button"><img src="{% static 'img/i_cart_big.png' %}" alt="" /></div>
@@ -76,6 +77,8 @@
 	</div>
 	<div class="modal_overlay"></div>
 </div>
+
+{% endcomment %}
 
 
 
